--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -76,29 +76,27 @@ Then, you can test the migrated NestJS Project, SDK library and Mockup Simulator
         {EDITOR_EXAMPLES.map((example) => (
           <li>
             {example.title}{": "}
-            <a 
-              style={{ cursor: "pointer" }} 
-              onClick={() => {
-                EditorComposer.nest({
-                  title: example.title,
-                  swagger: example.swagger,
-                  e2e: true,
-                  simulate: true,
-                }).catch(() => {});
-              }}
-            > NestJS Project </a>
+            <a style={{ cursor: "pointer" }} 
+               onMouseDown={(evt) => {
+               if (evt.which === 3) return;
+                 EditorComposer.nest({
+                   title: example.title,
+                   swagger: example.swagger,
+                   e2e: true,
+                   simulate: true,
+                 }).catch(() => {});
+               }}> NestJS Project </a>
             {" / "}
-            <a 
-              style={{ cursor: "pointer" }} 
-              onClick={() => {
-                EditorComposer.sdk({
-                  title: example.title,
-                  swagger: example.swagger,
-                  e2e: true,
-                  simulate: true,
-                }).catch(() => {});
-              }}
-            > SDK & Simulator </a>
+            <a style={{ cursor: "pointer" }} 
+               onMouseDown={(evt) => {
+               if (evt.which === 3) return;
+                 EditorComposer.sdk({
+                   title: example.title,
+                   swagger: example.swagger,
+                   e2e: true,
+                   simulate: true,
+                 }).catch(() => {});
+               }}> SDK & Simulator </a>
           </li>
         ))}
       </ul>
