--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -148,7 +148,7 @@ export default NESTIA_CONFIG;
 ```
   </Tab>
   <Tab>
-```typescript copy filename="INestiaConfig.ts" showLineNumbers {13-32}
+```typescript copy filename="INestiaConfig.ts" showLineNumbers {10-29}
 import type { INestApplication } from "@nestjs/common";
 import type { OpenApi } from "@samchon/openapi";
 
@@ -325,6 +325,18 @@ export namespace INestiaConfig {
     output: string;
 
     /**
+     * OpenAPI version.
+     *
+     * If you configure this property to be `2.0` or `3.0`, the newly generated
+     * `swagger.json` file would follow the specified OpenAPI version. The newly
+     * generated `swagger.json` file would be downgraded from the OpenAPI v3.1
+     * specification by {@link OpenApi.downgrade} method.
+     *
+     * @default 3.1
+     */
+    openapi?: "2.0" | "3.0" | "3.1";
+
+    /**
      * API information.
      *
      * If omitted, `package.json` content would be used instead.
@@ -411,7 +423,7 @@ If your backend application server does not have special configuration like `set
     'Pattern', 
     'Exclude',
   ]}
-  defaultIndex={2}>
+  defaultIndex={3}>
   <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers {7-15}
 import { INestiaConfig } from "@nestia/sdk";
