--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -51,6 +51,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - Advanced WebSocket routes
   - `@nestia/sdk`:
     - Swagger generator evolved than ever
+    - OpenAI function calling schema generator
     - SDK library generator for clients
     - Mockup Simulator for client developers
     - Automatic E2E test functions generator
