--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -32,7 +32,6 @@ export default NESTIA_CONFIG;
   <Tab>
 ```bash filename="Terminal" showLineNumbers {}
 npx nestia sdk
-npx nestia sdk --config nestia.config.ts --project tsconfig.json
 ```
   </Tab>
   <Tab>
@@ -103,11 +102,13 @@ export namespace update {
 
 Collection of typed `fetch` functions with DTO structures.
 
-Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia sdk` command. Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate SDK (Software Development Kit) library composed with. The newly generated SDK library would be composed with `DTO` and `fetch` functions with type definitions following your NestJS server.
+Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia sdk` command. 
 
-With the SDK library composed with RPC (Remote Procedure Call) functions, you can easily develop e2e test program. Also, frontend developers can utilize the SDK library to interact with your NestJS backend server, much safely and conveniently. If you can't imagine how the SDK library works, then look at the gif image of below. Left side is the NestJS backend server program, and right side is the Frontend program interacting with your server.
+Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate SDK (Software Development Kit) library composed with. The newly generated SDK library would be composed with `DTO` and `fetch` functions with type definitions following your NestJS server.
 
-Isn't it look like much more convenient and safer than before when using [Swagger Documents](swagger)?
+With the SDK library composed with RPC (Remote Procedure Call) functions, you can easily develop e2e test program. Also, frontend developers can utilize the SDK library to interact with your NestJS backend server, much safely and conveniently. 
+
+If you can't imagine how the SDK library works, then look at the gif image of below. Left side is the NestJS backend server program, and right side is the Frontend program interacting with your server. Isn't it look like much more convenient and safer than before [Swagger Documents](swagger) case?
 
 ![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
 
@@ -117,7 +118,7 @@ Isn't it look like much more convenient and safer than before when using [Swagge
 
 
 ## Configuration
-### `nestia.config.ts`
+### Application Module
 <Tabs items={[
   <code>nestia.config.ts</code>, 
   <code>INestiaConfig.ts</code>,
@@ -410,7 +411,7 @@ At least, you've to configure those two properties:
 
 When you've completed above configuration, just run `npx nestia sdk` command. Then, SDK library would be newly generated, and placed into the `$config.output` directory following your `nestia.config.ts` configuration.
 
-### Input Pattern
+### File Specification
 `nestia.config.ts` supports alternative options instead of using the `Module` instance. 
 
 If your backend application server does not have special configuration like `setGlobalPrefix`, `enableVersioning` and `RouterModule`, it is okay to specifying the target controller classes just by writing their file path like below.
@@ -647,9 +648,6 @@ If you configure `clone` property to be `true` in the `nestia.config.ts` file, a
 This `clone` mode is useful when you'd not separated DTO structures from the ORM models. When you're using `TypeORM` or `Prisma`, and returning the ORM generated instance directly in the controller without independent DTO structure definition, your SDK library requires the `TypeORM` or `Prisma` dependency install. By the dependency, client (frontend) developers may install the ORM library that they never need. 
 
 In that case, it would better to remove the dependency by using this `clone` mode.
-
-
-
 
 ### Propagation Mode
 <Tabs items={[
@@ -922,6 +920,18 @@ if (output.success) {
 ```
   </Tab>
 </Tabs>
+
+### CLI Arguments
+```bash filename="Terminal"
+npx nestia sdk
+npx nestia sdk --config nestia2.config.ts
+npx nestia sdk --project tsconfig2.json
+npx nestia sdk --config nestia3.config.ts --project tsconfig3.tsconfig.json
+```
+
+If you have a special configuration file that its file name is not `nestia.config.ts` or the configuration file is not placed on the root directory of the project, you can specify it with `--config` option like `npx nestia sdk --config another.config.ts`. 
+
+Also, if you have a special `tsconfig.json` file or the project file is not located in the root directory of the project, you can specify it with `--project` argument like `npx nestia sdk --project another.tsconfig.json`, too.
 
 
 
