--- a/website/pages/docs/sdk/openai.mdx
+++ b/website/pages/docs/sdk/openai.mdx
@@ -574,8 +574,8 @@ export default NESTIA_CONFIG;
 
 ### Additional Properties
 
-  - `openai.keyword`: Whether the parameters are keyworded or not.
-  - `openai.separate`
+  - [`openai.keyword`](#keyword): Whether the parameters are keyworded or not.
+  - [`openai.separate`](#separate): Separator function of the parameters for human and LLM.
   - `openai.beautify`: Whether to beautify JSON content or not.
 
 <details>
