--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -48,7 +48,11 @@ export default NESTIA_CONFIG;
   </Tab>
   <Tab>
 ```bash filename="Terminal" showLineNumbers {}
+# BUILD SWAGGER DOCUUMET ONLY
 npx nestia swagger
+
+# BUILD SWAGGER/OPENAI/SDK/E2E AT THE SAME TIME
+npx nestia all
 ```
   </Tab>
 </Tabs>
@@ -56,6 +60,8 @@ npx nestia swagger
 Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia swagger` command.
 
 Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate `swagger.json` file.
+
+If you want to build not only Swagger Document, but also [OpenAI function calling schema](./openai), [SDK (Software Development Kit) library](./sdk) and [automated E2E (End-to-End) test functions](./e2e) at the same time, run `npx nestia all` command instead.
 
 
 
@@ -443,190 +449,58 @@ At least, you've to configure those two properties:
 
 When you've completed above configuration, just run `npx nestia swagger` command. Then, `swagger.json` file would be newly generated, and placed into the `$config.swagger.output` directory following your `nestia.config.ts` configuration.
 
-### File Specification
-`nestia.config.ts` supports alternative options specifying path of target controllers.
-
-If your backend application server does not have special configuration like `setGlobalPrefix`, `enableVersioning` and `RouterModule`, it is okay to specifying the target controller classes just by writing their file or directory paths like below.
-
-<Tabs items={[
-    'Module (express)',
-    'Module (fastify)', 
-    'Directory',
-    'Pattern', 
-    'Exclude'
-  ]}
-  defaultIndex={3}>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {7-15}
+### Multiple Files Generation
+```typescript filename="nestia.config.ts" showLineNumbers
 import { INestiaConfig } from "@nestia/sdk";
 import { NestFactory } from "@nestjs/core";
 
-import { YourModule } from "./src/YourModule";
+import { AppModule } from "./src/modules/AppModule";
+import { BbsModule } from "./src/modules/BbsModule";
+import { CommonModule } from "./src/modules/CommonModule";
 
-const NESTIA_CONFIG: INestiaConfig = {
-  input: async () => {
-    const app = await NestFactory.create(YourModule);
-    // app.setGlobalPrefix("api");
-    // app.enableVersioning({
-    //     type: VersioningType.URI,
-    //     prefix: "v",
-    // })
-    return app;
-  },
-  swagger: {
-    openapi: "3.1",
-    output: "dist/swagger.json",
-    beautify: true,
-    security: {
-      bearer: {
-        type: "apiKey",
-        name: "Authorization",
-        in: "header",
+export const NESTIA_CONFIGURATIONS: INestiaConfig[] = [
+  {
+    input: () => NestFactory.create(AppModule),
+    swagger: {
+      output: "swagger.json",
+      security: {
+        bearer: {
+          type: "apiKey",
+        },
       },
     },
-    servers: [
-      {
-        url: "http://localhost:3000",
-        description: "Local Server",
-      },
-    ],
   },
-};
-export default NESTIA_CONFIG;
-```
-  </Tab>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {8-16}
-import { INestiaConfig } from "@nestia/sdk";
-import { NestFactory } from "@nestjs/core";
-import { FastifyAdapter } from "@nestjs/platform-fastify";
-
-import { YourModule } from "./src/YourModule";
-
-const NESTIA_CONFIG: INestiaConfig = {
-  input: async () => {
-    const app = await NestFactory.create(YourModule, new FastifyAdapter());
-    // app.setGlobalPrefix("api");
-    // app.enableVersioning({
-    //     type: VersioningType.URI,
-    //     prefix: "v",
-    // })
-    return app;
-  },
-  swagger: {
-    openapi: "3.1",
-    output: "dist/swagger.json",
-    beautify: true,
-    security: {
-      bearer: {
-        type: "apiKey",
-        name: "Authorization",
-        in: "header",
+  {
+    input: () => NestFactory.create(BbsModule),
+    swagger: {
+      output: "bbs.swagger.json",
+      security: {
+        bearer: {
+          type: "apiKey",
+        },
       },
     },
-    servers: [
-      {
-        url: "http://localhost:3000",
-        description: "Local Server",
-      },
-    ],
   },
-};
-export default NESTIA_CONFIG;
-```
-  </Tab>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {4-8}
-import { INestiaConfig } from "@nestia/sdk";
-
-const NESTIA_CONFIG: INestiaConfig = {
-  input: [
-    "src/controllers", 
-    "src/fake/controllers", 
-    "src/test/controllers"
-  ],
-  swagger: {
-    openapi: "3.1",
-    output: "dist/swagger.json",
-    beautify: true,
-    security: {
-      bearer: {
-        type: "apiKey",
-        name: "Authorization",
-        in: "header",
+  {
+    input: () => NestFactory.create(CommonModule),
+    swagger: {
+      output: "common.swagger.json",
+      security: {
+        bearer: {
+          type: "apiKey",
+        },
       },
     },
-    servers: [
-      {
-        url: "http://localhost:3000",
-        description: "Local Server",
-      },
-    ],
   },
-};
-export default NESTIA_CONFIG;
+];
+export default NESTIA_CONFIGURATIONS;
 ```
-  </Tab>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {4}
-import { INestiaConfig } from "@nestia/sdk";
 
-const NESTIA_CONFIG: INestiaConfig = {
-  input: "src/**/*.controller.ts",
-  swagger: {
-    openapi: "3.1",
-    output: "dist/swagger.json",
-    beautify: true,
-    security: {
-      bearer: {
-        type: "apiKey",
-        name: "Authorization",
-        in: "header",
-      },
-    },
-    servers: [
-      {
-        url: "http://localhost:3000",
-        description: "Local Server",
-      },
-    ],
-  },
-};
-export default NESTIA_CONFIG;
-```
-  </Tab>
-  <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {4-7}
-import { INestiaConfig } from "@nestia/sdk";
+You can build multiple Swagger Document files.
 
-const NESTIA_CONFIG: INestiaConfig = {
-  input: {
-    include: ["src/controllers"],
-    exclude: ["src/**/*.fake.ts"],
-  },
-  swagger: {
-    openapi: "3.1",
-    output: "dist/swagger.json",
-    beautify: true,
-    security: {
-      bearer: {
-        type: "apiKey",
-        name: "Authorization",
-        in: "header",
-      },
-    },
-    servers: [
-      {
-        url: "http://localhost:3000",
-        description: "Local Server",
-      },
-    ],
-  },
-};
-export default NESTIA_CONFIG;
-```
-  </Tab>
-</Tabs>
+Just configure an array of `INestiaConfig` instances like above example code. 
+
+Then, `@nestia/sdk` will generate multiple Swagger Document files following the configurations.
 
 ### Additional Properties
 Additionally, you can configure the `swagger` property in the `nestia.config.ts` file.
